--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body {
 }
 
 .register-form .form-input {
-    margin: l0px 0px;
+    margin: 10px 0px;
 }
 
 .register-form .form-input label,
@@ -39,7 +39,7 @@ body {
     display: block;
     font-size: 15px;
     color: #111;
-    margin: 5px 0px 2px;
+    margin-top: 5px;
 }
 
 .register-form .captcha {
@@ -67,7 +67,8 @@ body {
     display: flex;
 }
 
-.register-form .captcha .captcha-input input {
+.register-form .captcha .captcha-input input,
+.register-form .form-input input {
     width: 100%;
     height: 40px;
     line-height: 40px;
